# grey

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  api.h  backend.cpp  backend.h  components.cpp  components.h  cpp.hint  extraimstyle.h  grey.h  grey_context.h  texture_mgr.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
backends/: win32dx11.cpp  win32dx11.h
common/: containers.hpp  img.cpp  img.h
demo/desktop/: CMakeLists.txt  dpi-aware.manifest  main.cpp  main.rc  main_transparent.cpp  main_wnd.cpp  main_wnd.h  res.inl
demo/pure/: CMakeLists.txt  main_dx11.cpp  main_glfw_opengl3.cpp
docs/: README.md  config.md  release-notes.md
dotnet/: Grey.sln
dotnet/.github/workflows/: build.yml
dotnet/ConsoleDemo/: ConsoleDemo.csproj  Program.cs
dotnet/Grey/: App.cs  CodeEditor.cs  Enums.cs  Grey.csproj  Icon.cs  MenuBar.cs  Native.cs  StatusBar.cs  TabBar.cs  Table.cs  Window.cs
fonts/: font_awesome.h  font_awesome_6.inl  font_awesome_6_brands.inl  opensans.inl  roboto.inl
grey/: CMakeLists.txt  anim.cpp  anim.h  api.cpp  app.cpp  app.h  backend.cpp  backend.h  components.cpp  components.h  grey.cpp  grey.h  grey_context.h  themes.cpp  themes.h  themes.hpp  widgets.cpp  widgets.h  x.cpp  x.h
grey/backends/: glfw_gl3.hpp  glfw_metal.hpp  glfw_metal.mm  glfwgl3app.hpp  macos_cgl.h  macos_cgl.mm  swrapp.hpp  win32dx11.cpp  win32dx11.h  win32dx11app.hpp
grey/common/: clipboard.cpp  clipboard.h  config.hpp  config_handler.hpp  datetime.cpp  datetime.h  desktop_shell.cpp  desktop_shell.h  fss.cpp  fss.h  guid.cpp  guid.h  hashing.cpp  hashing.h  http.cpp  http.h  img.cpp  img.h  os.cpp  os.h  platform.h  process.cpp  process.h  state_handler.hpp  stl.hpp  str.cpp  str.h  url.cpp  url.h
grey/common/lin/: os.cpp  os.h
grey/common/win32/: CDialogEventHandler.hpp  app.cpp  app.h  gdi.cpp  gdi.h  monitor.cpp  monitor.h  mutex.cpp  mutex.h  npipe.cpp  npipe.h  os.cpp  os.h  perf_counter.cpp  perf_counter.h  popup_menu.cpp  popup_menu.h  reg.cpp  reg.h  shell.cpp  shell.h  shell_notify_icon.cpp  shell_notify_icon.h  user.cpp  user.h  uwp.cpp  uwp.h  window.cpp  window.h
grey/fonts/: MaterialIcons-Regular.inl  font_awesome_6_brands.h  font_awesome_6_brands_400.inl  font_awesome_6_regular_400.inl  font_awesome_6_solid_900.inl  font_loader.cpp  font_loader.h  font_loader.hpp  forkawesome.h  forkawesome.inl  noto_sans.inl
grey/x/: graph.cpp  graph.h
